--- a/.github/workflows/back-deploy.yml
+++ b/.github/workflows/back-deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: web docker build and push
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/randps-front .
-          docker push ${{ secrets.DOCKER_USERNAME }}/randps-front
+          docker build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/randps-back .
+          docker push ${{ secrets.DOCKER_USERNAME }}/randps-back
           
       # 보안그룹에 github actions ip 추가
       - name: Get Github Actions IP
@@ -61,7 +61,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             sudo docker rm -f $(docker ps -qa)
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/randps-front
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/randps-back
             sudo docker-compose up -d
             sudo docker image prune -f
 
