--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@
 #spring.datasource.password=
 
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/randps?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://database-1.cb9vsbxuemec.ap-northeast-2.rds.amazonaws.com:3306/randps?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username= root
-spring.datasource.password= test
+spring.datasource.password= merongxp123!!
 spring.jpa.database=mysql
 
 #hibernate
